添加商品与商品列表页

--- a/FreshShop/Store/templates/store/base.html
+++ b/FreshShop/Store/templates/store/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load setJsonTag %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -30,7 +31,7 @@
                     <div class="sidebar-brand-icon rotate-n-15">
                       <i class="fas fa-laugh-wink"></i>
                     </div>
-                <div class="sidebar-brand-text mx-3">零度管理平台</div>
+                    <div class="sidebar-brand-text mx-3">零度管理平台</div>
                 </a>
 
                 <!-- Divider -->
@@ -38,24 +39,14 @@
 
                 <!-- Nav Item - Dashboard -->
                 <li class="nav-item">
-                    {% if result.status %}
-                        <a class="nav-link" href="index.html">
-                            <i class="fas fa-fw fa-tachometer-alt"></i>
-                            <span>店铺管理</span>
-                        </a>
-                    {% else %}
-                        <a class="nav-link" href="/store/register_store/">
-                            <i class="fas fa-fw fa-tachometer-alt"></i>
-                            <span>还没有店铺，去注册</span>
-                        </a>
-                    {% endif %}
+                    <a class="nav-link" href="/store/index/">
+                        <i class="fas fa-fw fa-cog"></i>
+                        <span>首页</span>
+                    </a>
                 </li>
 
                 <!-- Divider -->
-                <hr class="sidebar-divider">
-
-                <!-- Heading -->
-{#                <div class="sidebar-heading">接口</div>#}
+                <hr class="sidebar-divider my-0">
 
                 <!-- Nav Item - Pages Collapse Menu -->
                 <li class="nav-item">
@@ -66,10 +57,19 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">商品管理：</h6>
-                            <a class="collapse-item" href="buttons.html">商品添加</a>
-                            <a class="collapse-item" href="cards.html">商品列表</a>
+                            <a class="collapse-item" href="/store/add_goods/">商品添加</a>
+                            <a class="collapse-item" href="/store/list_goods/">商品列表</a>
                         </div>
                     </div>
+                </li>
+
+                <hr class="sidebar-divider my-0">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/store/register_store/">
+                        <i class="fas fa-fw fa-cog"></i>
+                        <span>注册店铺</span>
+                    </a>
                 </li>
 
             </ul>
@@ -90,7 +90,7 @@
                         <!-- Topbar Search -->
                         <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                                <input type="text" name="keywords" value="{{ keywords }}" class="form-control bg-light border-0 small" placeholder="搜索" aria-label="Search" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                     <button class="btn btn-primary" type="button">
                                         <i class="fas fa-search fa-sm"></i>
@@ -101,26 +101,6 @@
 
                         <!-- Topbar Navbar -->
                         <ul class="navbar-nav ml-auto">
-
-                            <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-                            <li class="nav-item dropdown no-arrow d-sm-none">
-                                <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-search fa-fw"></i>
-                                </a>
-                                <!-- Dropdown - Messages -->
-                                <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
-                                    <form class="form-inline mr-auto w-100 navbar-search">
-                                        <div class="input-group">
-                                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
-                                            <div class="input-group-append">
-                                                <button class="btn btn-primary" type="button">
-                                                    <i class="fas fa-search fa-sm"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </li>
 
                             <!-- Nav Item - Alerts -->
                             <li class="nav-item dropdown no-arrow mx-1">
@@ -147,7 +127,7 @@
                             <!-- Nav Item - User Information -->
                             <li class="nav-item dropdown no-arrow">
                                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ request.session.username }}</span>
+                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ request.COOKIES.username|deserialization }}</span>
                                     <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
                                 </a>
                                 <!-- Dropdown - User Information -->
