--- a/FreshShop/Store/templates/store/index.html
+++ b/FreshShop/Store/templates/store/index.html
@@ -8,7 +8,7 @@
     <!-- Begin Page Content -->
     <div class="container-fluid">
         <img src="/static/store/images/img11.gif">
-
+        <img src="/static/store/images/img12.gif">
     </div>
     <!-- /.container-fluid -->
 {% endblock %}
