--- a/FreshShop/Store/templates/store/register_store.html
+++ b/FreshShop/Store/templates/store/register_store.html
@@ -15,19 +15,19 @@
             <table style="margin: auto">
                 <tr class="form-group">
                     <td><label>店铺名称：</label></td>
-                    <td><input type="text" class="form-control" name="store_name" placeholder="店铺名称"></td>
+                    <td><input type="text" class="form-control" name="store_name"></td>
                 </tr>
                 <tr class="form-group">
                     <td><label>店铺描述：</label></td>
-                    <td><input type="text" class="form-control" name="store_description" placeholder="店铺描述"></td>
+                    <td><input type="text" class="form-control" name="store_description"></td>
                 </tr>
                 <tr class="form-group">
                     <td><label>店铺电话：</label></td>
-                    <td><input type="text" class="form-control" name="store_phone" placeholder="店铺电话"></td>
+                    <td><input type="text" class="form-control" name="store_phone"></td>
                 </tr>
                 <tr class="form-group">
                     <td><label>店铺注册资金：</label></td>
-                    <td><input type="text" class="form-control" name="store_money" placeholder="店铺注册资金"></td>
+                    <td><input type="text" class="form-control" name="store_money"></td>
                 </tr>
                 <tr class="form-group">
                     <td><label>店铺类型：</label></td>
@@ -39,7 +39,7 @@
                 </tr>
                 <tr class="form-group">
                     <td><label>店铺logo：</label></td>
-                    <td><input type="file" class="form-control" name="store_logo" placeholder="店铺logo"></td>
+                    <td><input type="file" class="form-control" name="store_logo"></td>
                 </tr>
                 <tr class="form-group">
                     <td><label>店铺地址：</label></td>
