注册登录功能完善

--- a/FreshShop/Store/templates/store/add_goods.html
+++ b/FreshShop/Store/templates/store/add_goods.html
@@ -42,7 +42,7 @@
                     <td><input type="number" class="form-control" name="goods_safeDate"></td>
                 </tr>
                 <tr class="form-group">
-                    <td><label>商品店铺：</label></td>
+                    <td><label>上架店铺：</label></td>
                     <td>
                         {% for i in store %}
                             <input type="checkbox" name="store_type" value="{{ i.id }}">{{ i.store_name }}&nbsp;&nbsp;
