--- a/FreshShop/Store/templates/store/login.html
+++ b/FreshShop/Store/templates/store/login.html
@@ -19,7 +19,7 @@
                 <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                     <div class="row">
-                        <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                        <div class="col-lg-5 d-none d-lg-block bg-login-image"></div>
                         <div class="col-lg-7">
                             <div class="p-5">
                                 <div class="text-center">
@@ -41,7 +41,7 @@
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="text-center">
-                                                <a class="small" href="#">忘记密码?</a>
+                                                <a class="small" href="/store/reset_password/">忘记密码?</a>
                                             </div>
                                         </div>
                                     </div>
