--- a/FreshShop/Store/templates/store/register.html
+++ b/FreshShop/Store/templates/store/register.html
@@ -44,7 +44,7 @@
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="text-center">
-                                                <a class="small" href="#">忘记密码?</a>
+                                                <span class="small">欢迎注册</span>
                                             </div>
                                         </div>
                                     </div>
