--- a/FreshShop/Buyer/templates/buyer/index.html
+++ b/FreshShop/Buyer/templates/buyer/index.html
@@ -50,7 +50,7 @@
 				<a href="#">加州提子</a>
 				<a href="#">亚马逊牛油果</a>
 			</div>
-			<a href="#" class="goods_more fr" id="fruit_more">查看更多 ></a>
+			<a href="/buyer/goods_list/?type_id={{ goods_type.id }}" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -58,8 +58,8 @@
 			<ul class="goods_list fl">
                 {% for goods in goods_type|typeData %}
                     <li>
-                        <h4><a href="#">{{ goods.goods_name }}</a></h4>
-                        <a href="#"><img src="/static/{{ goods.goods_images }}"></a>
+                        <h4><a href="/buyer/goods_detail/?goods_id={{ goods.id }}">{{ goods.goods_name }}</a></h4>
+                        <a href="/buyer/goods_detail/?goods_id={{ goods.id }}"><img src="/static/{{ goods.goods_images }}"></a>
                         <div class="prize">¥ {{ goods.goods_price }}</div>
                     </li>
                 {% endfor %}
