购物车功能进一步完善以及完成订单确认页面

--- a/FreshShop/Buyer/templates/buyer/base_person.html
+++ b/FreshShop/Buyer/templates/buyer/base_person.html
@@ -46,7 +46,7 @@
 		<div class="guest_cart fr">
 			<a href="/buyer/cart/" class="cart_name fl">我的购物车</a>
 			{% if request.session.is_login %}
-			    <div class="goods_count fl">{{ request.COOKIES.cartlength }}</div>
+			    <div class="goods_count fl">{{ request.session.buyer_id|lengthCart }}</div>
             {% else %}
                 <div class="goods_count fl">0</div>
             {% endif %}
