--- a/FreshShop/Buyer/templates/buyer/goods_detail.html
+++ b/FreshShop/Buyer/templates/buyer/goods_detail.html
@@ -26,22 +26,23 @@
 				<span class="show_pirze">¥<em>{{ goods.goods_price }}</em></span>
 				<span class="show_unit">单  位：500g</span>
 			</div>
-{#            <form method="post" action="/buyer/goods_detail/">#}
-{#                {% csrf_token %}#}
-            <div class="goods_num clearfix">
-                <div class="num_name fl">数 量：</div>
-                <div class="num_add fl" id="num">
-                    <input type="text" id="number" name="number" class="num_show fl" value="1">
-                    <a href="javascript:operation('add');" class="add fr">+</a>
-                    <a href="javascript:operation('minus');" class="minus fr">-</a>
+            <form method="post" action="/buyer/place_order/">
+                {% csrf_token %}
+                <input type="hidden" name="goods_id" value="{{ goods.id }}">
+                <div class="goods_num clearfix">
+                    <div class="num_name fl">数 量：</div>
+                    <div class="num_add fl" id="num">
+                        <input type="text" id="number" name="number" class="num_show fl" value="1">
+                        <a href="javascript:operation('add');" class="add fr">+</a>
+                        <a href="javascript:operation('minus');" class="minus fr">-</a>
+                    </div>
                 </div>
-            </div>
-            <div class="total">总价：<input type="text" id="total" name="total" value="{{ goods.goods_price }}" size="5" readonly style="pointer-events: none;cursor: text;border: none;color: red"><span style="color: red">元</span></div>
-            <div class="operate_btn">
-                <a href="javascript:;" class="buy_btn">立即购买</a>
-                <div class="add_cart" id="add_cart" style="cursor: pointer">加入购物车</div>
-            </div>
-{#            </form>#}
+                <div class="total">总价：<input type="text" id="total" name="total" value="{{ goods.goods_price }}" size="5" readonly style="pointer-events: none;cursor: text;border: none;color: red"><span style="color: red">元</span></div>
+                <div class="operate_btn">
+                    <input type="submit" class="buy_btn" value="立即购买" style="cursor: pointer">
+                    <div class="add_cart" id="add_cart" style="cursor: pointer">加入购物车</div>
+                </div>
+            </form>
 		</div>
 	</div>
 
