订单功能以及付款功能实现

--- a/FreshShop/Buyer/templates/buyer/cart.html
+++ b/FreshShop/Buyer/templates/buyer/cart.html
@@ -74,7 +74,7 @@
             value++;
             $(this).next().val(value);
             total = value * price;
-            $(this).closest("li").next()[0].childNodes[0].innerHTML = total.toFixed(2)
+            $(this).closest("li").next()[0].childNodes[0].innerHTML = total.toFixed(2);
             getTotal();
         }) ;
         $(".minus").click(function () {
