--- a/FreshShop/Buyer/templates/buyer/base.html
+++ b/FreshShop/Buyer/templates/buyer/base.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="header_con">
 		<div class="header">
-			<div class="welcome fl">欢迎来到天天生鲜!</div>
+			<div class="welcome fl">欢迎来到天天生鲜!&nbsp;&nbsp;&nbsp;&nbsp;<a href="/buyer/index/">首页</a></div>
 			<div class="fr">
 				<div class="login_btn fl">
                     {% if request.session.buyer_id %}
@@ -27,7 +27,7 @@
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="/buyer/user_center/">用户中心</a>
 					<span>|</span>
 					<a href="/buyer/cart/">我的购物车</a>
 					<span>|</span>
