--- a/FreshShop/Buyer/templates/buyer/user_order.html
+++ b/FreshShop/Buyer/templates/buyer/user_order.html
@@ -9,16 +9,16 @@
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="user_center_info.html">· 个人信息</a></li>
-				<li><a href="user_center_order.html" class="active">· 全部订单</a></li>
-				<li><a href="user_center_site.html">· 收货地址</a></li>
+				<li><a href="/buyer/user_center/">· 个人信息</a></li>
+				<li><a href="/buyer/user_order/" class="active">· 全部订单</a></li>
+				<li><a href="/buyer/user_site/">· 收货地址</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
             <h3 class="common_title2">全部订单</h3>
             {% for order in order_list %}
                 <ul class="order_list_th w978 clearfix">
-                    <li class="col01">2016-8-21 17:36:24</li>
+                    <li class="col01">{{ order.order_id|orderTime }}</li>
                     <li class="col02">订单号：{{ order.order_id }}</li>
                     <li class="col02 stress">{{ order.get_order_status_display }}</li>
                     <li class="col02 ">运费：10.00元</li>
