API接口实现商品列表显示以及分页功能

--- a/FreshShop/Store/templates/store/base.html
+++ b/FreshShop/Store/templates/store/base.html
@@ -18,6 +18,7 @@
         <link href="/static/store/css/sb-admin-2.min.css" rel="stylesheet">
         <script type="text/javascript" src="/static/store/js/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="/static/store/js/vue.js"></script>
+        <script type="text/javascript" src="/static/store/js/vue-resource.js"></script>
         {% block style %}
         {% endblock %}
     </head>
